# GameofLife

./: CMakeLists.txt  CTestConfig.cmake  Dockerfile  README.md
CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  golSetupMSVCRuntime.cmake  golSetupTesting.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  golMyFirstApp.cpp  golSimulator.cpp  stillLifes.cpp
Code/Lib/: CMakeLists.txt  golBasicTypes.cpp  golBasicTypes.h  golClass.cpp  golClass.hpp  golException.cpp  golException.h  golExceptionMacro.h  golMyFunctions.cpp  golMyFunctions.h  golWin32ExportHeader.h  grid.cpp  grid.hpp
Testing/: CMakeLists.txt  golBasicTest.cpp  golCatchMain.cpp  golCatchMain.h  golClassTest.cpp  golCommandLineArgsTest.cpp  gridTest.cpp
